--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,12 @@ jobs:
           static_site_generator: next
 
       - name: Build with Next.js 🏗️
-        run: npx next build
+        run: |
+          npx next build
+          npx next export
+
+      - name: List directory contents
+        run: ls -la
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
