--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build with Next.js 🏗️
         run: |
-          npx next build
+          npm run build
 
       - name: List directory contents
         run: ls -la
